--- a/package.json
+++ b/package.json
@@ -1,22 +1,42 @@
 {
   "name": "next-eth",
-  "private": true,
+  "description": "NextJs and Hardhat setup to kickstart your decentralized application.",
+  "version": "1.0.0",
+  "license": "MIT",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "typecheck": "tsc --noEmit",
+    "prepare": "husky install",
+    "prettier:check": "prettier --check \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
+    "ethers": "^5.5.2",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-hot-toast": "^2.1.1"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.0.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "autoprefixer": "^10.4.0",
+    "chai": "^4.3.4",
     "eslint": "7.32.0",
     "eslint-config-next": "12.0.7",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "ethereum-waffle": "^3.4.0",
+    "hardhat": "^2.7.1",
+    "husky": "^7.0.4",
+    "postcss": "^8.4.4",
+    "tailwindcss": "^3.0.1",
     "typescript": "4.5.3"
   }
 }
