--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "test": "playwright test",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "typecheck": "tsc --noEmit",
     "prepare": "husky install",
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
+    "@playwright/test": "^1.17.1",
     "@types/node": "16.11.12",
     "@types/react": "17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
