📦 NEW: Playwright tests for contracts and pages

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,9 @@ jobs:
 
       - name: Typecheck
         run: yarn typecheck
+      
+      - name: Double check
+        run: npx playwright install && yarn test
 
       - name: Build
         env:
