--- a/package.json
+++ b/package.json
@@ -22,26 +22,27 @@
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.4",
+    "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "2.0.2",
     "@playwright/test": "1.18.0",
+    "@types/mocha": "^9.1.0",
     "@types/node": "16.11.21",
     "@types/react": "17.0.38",
     "@typescript-eslint/eslint-plugin": "5.10.0",
     "autoprefixer": "10.4.2",
+    "dotenv": "^14.2.0",
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
-    "@nomiclabs/hardhat-etherscan": "^3.0.0",
-    "dotenv": "^14.2.0",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-simple-import-sort": "7.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
     "ethereum-waffle": "3.4.0",
     "hardhat": "2.8.3",
+    "hardhat-gas-reporter": "^1.0.7",
     "husky": "7.0.4",
     "postcss": "8.4.5",
     "tailwindcss": "3.0.15",
-    "typescript": "4.5.5",
-    "hardhat-gas-reporter": "^1.0.7",
-    "ts-node": "^10.4.0"
+    "ts-node": "^10.4.0",
+    "typescript": "4.5.5"
   }
 }
