--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install Yarn Dependencies
-        run: yarn install --frozen-lockfile --silent
+        run: yarn install
 
       - name: Lint
         run: yarn lint
@@ -43,7 +43,7 @@ jobs:
 
       - name: Typecheck
         run: yarn typecheck
-      
+
       - name: Double check
         run: npx playwright install && yarn test
 
