--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-hot-toast": "2.2.0"
+    "react-hot-toast": "2.2.0",
+    "wagmi": "^0.2.21"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.5",
