--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "prettier:check": "prettier --check \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "ethers": "5.6.5",
+    "@rainbow-me/rainbowkit": "^0.1.0",
+    "ethers": "^5.6.5",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-hot-toast": "2.2.0",
-    "wagmi": "0.2.28"
+    "wagmi": "^0.3.3"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.0.5",
@@ -27,7 +28,7 @@
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@playwright/test": "1.21.1",
     "@types/mocha": "9.1.1",
-    "@types/node": "16.11.33",
+    "@types/node": "17.0.31",
     "@types/react": "18.0.8",
     "@typescript-eslint/eslint-plugin": "5.22.0",
     "autoprefixer": "10.4.7",
