--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "prettier:check": "prettier --check \"./src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "0.1.2",
+    "@rainbow-me/rainbowkit": "^0.4.4",
     "ethers": "5.6.9",
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "2.3.0",
-    "wagmi": "0.4.12"
+    "wagmi": "^0.5.11"
   },
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "2.1.0",
@@ -28,7 +28,7 @@
     "@nomiclabs/hardhat-waffle": "2.0.3",
     "@playwright/test": "1.24.0",
     "@types/mocha": "9.1.1",
-    "@types/node": "17.0.31",
+    "@types/node": "18.0.6",
     "@types/react": "18.0.15",
     "@typescript-eslint/eslint-plugin": "5.30.7",
     "autoprefixer": "10.4.7",
